--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "gatsby-plugin-sharp": "^2.6.14",
     "gatsby-source-filesystem": "^2.3.14",
     "gatsby-transformer-sharp": "^2.5.7",
+    "konva": "^7.2.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-konva": "^17.0.1-3"
   },
   "devDependencies": {
     "prettier": "2.0.5"
