--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "version": "0.1.0",
   "author": "Georgy Petukhov",
   "dependencies": {
-    "gatsby": "^2.23.12",
-    "konva": "^7.2.2",
+    "gatsby": "^5.13.3",
+    "konva": "^9.3.6",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-konva": "^17.0.1-3"
+    "react-konva": "^18.2.10"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "prettier": "3.2.5"
   },
   "keywords": [
     "gatsby"
