--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
     "arrowParens": "avoid",
     "semi": true,
     "tabWidth": 4,
-    "singleQuote": true
+    "singleQuote": true,
+    "printWidth": 100
 }
