move more image config outside

--- a/src/image-config.json
+++ b/src/image-config.json
@@ -3,5 +3,9 @@
         "primary": "#2AE5BC",
         "secondary": "#5BD8BD",
         "accent": "#99E0D1"
-    }
+    },
+    "gradientStops": [0, 0.5, 1],
+    "font": "Arial",
+    "fontWeight": "bold",
+    "textColor": "white"
 }
