--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@types/wicg-file-system-access": "^2023.10.5",
+    "buffer": "^6.0.3",
+    "canvas": "^2.11.2",
+    "jpeg-js": "^0.4.4",
     "konva": "^9.3.6",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
@@ -19,6 +22,7 @@
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "vite-plugin-node-polyfills": "^0.22.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
