--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/pako": "^2.0.3",
     "@types/wicg-file-system-access": "^2023.10.5",
     "buffer": "^6.0.3",
     "canvas": "^2.11.2",
     "jpeg-js": "^0.4.4",
     "konva": "^9.3.6",
+    "pako": "^2.1.0",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
@@ -22,7 +24,6 @@
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
-    "vite-plugin-node-polyfills": "^0.22.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -37,6 +38,7 @@
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "vite-plugin-svgr": "^4.2.0"
   }
 }
